fix: Openapi generation helpdesk APIs
