# openapi/openapi.json
@@ -65,7 +65,7 @@
           },
           {
             "description": "Filter by month, requires year otherwise gets ignored",
-            "example": 5,
+            "example": "5",
             "in": "query",
             "name": "month",
             "required": false,
@@ -75,7 +75,7 @@
           },
           {
             "description": "Filter by day, requires month otherwise gets ignored",
-            "example": 7,
+            "example": "7",
             "in": "query",
             "name": "day",
             "required": false,
@@ -85,7 +85,7 @@
           },
           {
             "description": "Filter by hours, requires day otherwise gets ignored",
-            "example": 1,
+            "example": "1",
             "in": "query",
             "name": "hour",
             "required": false,
@@ -168,11 +168,6 @@
             }
           }
         },
-        "security": [
-          {
-            "JWT": []
-          }
-        ],
         "summary": "Get list of failed messages saved on blob storage as JSON files",
         "tags": [
           "API Helpdesk"
@@ -295,11 +290,6 @@
             }
           }
         },
-        "security": [
-          {
-            "JWT": []
-          }
-        ],
         "summary": "Retrieve the specified error message JSON by its filename",
         "tags": [
           "API Helpdesk"
@@ -432,11 +422,6 @@
             }
           }
         },
-        "security": [
-          {
-            "JWT": []
-          }
-        ],
         "summary": "Retry the specified error message JSON by its filename",
         "tags": [
           "API Helpdesk"
